# Archgraph-AI

./: Archgraph_Test_Results.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Why Archgraph-AI.md  docker-compose.yml  pyproject.toml
archgraph/: __init__.py  cli.py
archgraph/api/: main.py
archgraph/critic/: engine.py
archgraph/graph/: graph_manager.py  seed_data.py
archgraph/ingestion/: fetcher.py
tests/: test_archgraph.py
