[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archgraph-ai"
version = "0.1.0"
description = "Citation-backed system design critique engine powered by a knowledge graph of engineering blog post-mortems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Ashwin", url = "https://github.com/ashwin9390" }]
keywords = ["system-design", "architecture", "graph", "critique", "engineering", "post-mortem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "requests>=2.31",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.19"]
playwright = ["playwright>=1.44"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
archgraph = "archgraph.cli:main"

[project.urls]
Homepage = "https://github.com/ashwin9390/archgraph-ai"
Issues   = "https://github.com/ashwin9390/archgraph-ai/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["archgraph*"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
